// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grant Information Component  should not break if grant text is not in the record 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-grant-information"
      id="standard-card-grant-information"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-grant-information-header"
            id="standard-card-grant-information-header"
          >
            Grant information
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-grant-information-content"
        data-testid="standard-card-grant-information-content"
        id="standard-card-grant-information-content"
      >
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-0"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-0"
                >
                  National Health and Medical Research Council
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-0"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-1"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-1"
                >
                  Cancer Council Queensland
                </span>
                <span
                  data-testid="rek-grant-id-1"
                >
                   (
                  1042819
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-1"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-2"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-2"
                >
                  National Breast Cancer Foundation
                </span>
                <span
                  data-testid="rek-grant-id-2"
                >
                   (
                  CG-12-07 | CG-10-04
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grant Information Component  should not break if rek_grant_id is not in the search key 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-grant-information"
      id="standard-card-grant-information"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-grant-information-header"
            id="standard-card-grant-information-header"
          >
            Grant information
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-grant-information-content"
        data-testid="standard-card-grant-information-content"
        id="standard-card-grant-information-content"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-nr9o0-MuiTypography-root"
          data-testid="rek-grant-text"
          id="grantInformation"
        >
          We thank Jonathan Harris for the provision of DHT and David Miller for technical assistance and Kyle Upton for his critical review of the manuscript. Research was funded by the National Breast Cancer Foundation (NBCF: 2007003445 and CG-12-07) of Australia, the Australian Research Council (ARC: DP0985025), the Cancer Council of Queensland (CCQ: 1026095) and The University of Queensland. DHD was supported by a Collaborative Program Grant from the, National Breast Cancer Foundation [NBCF; CG-08-03]. Institute, Integrative Cancer Biology Program U54CA1113001 (KPN). SLE, JDF, AMS and ED are supported by Fellowships from the NBCF [ID# ECF-10-05, ECF-12-04, ECF-12-12 and ECF-13-04 respectively]. FA is supported by Future Fellowship from the Australian Research Council [ID: FT130101417]. JMWG is funding by a Scientific Fellowship from Breast Cancer Now. MJM and JAB are supported by an Australian Postgraduate Award (APA). AS was supported from NBCF program grant. SJC supported by NHMRC fellowship. Funding to pay the Open Access publication charges for this article was provided by The University of Queensland.
        </p>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-0"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-0"
                >
                  National Health and Medical Research Council
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-0"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-1"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-1"
                >
                  Cancer Council Queensland
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-1"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-2"
              >
                Grant agency
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-2"
                >
                  National Breast Cancer Foundation
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grant Information Component  should not render component with empty publication 1`] = `<div />`;

exports[`Grant Information Component  should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-grant-information"
      id="standard-card-grant-information"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
            data-testid="standard-card-grant-information-header"
            id="standard-card-grant-information-header"
          >
            Grant information
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        data-analyticsid="standard-card-grant-information-content"
        data-testid="standard-card-grant-information-content"
        id="standard-card-grant-information-content"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-nr9o0-MuiTypography-root"
          data-testid="rek-grant-text"
          id="grantInformation"
        >
          We thank Jonathan Harris for the provision of DHT and David Miller for technical assistance and Kyle Upton for his critical review of the manuscript. Research was funded by the National Breast Cancer Foundation (NBCF: 2007003445 and CG-12-07) of Australia, the Australian Research Council (ARC: DP0985025), the Cancer Council of Queensland (CCQ: 1026095) and The University of Queensland. DHD was supported by a Collaborative Program Grant from the, National Breast Cancer Foundation [NBCF; CG-08-03]. Institute, Integrative Cancer Biology Program U54CA1113001 (KPN). SLE, JDF, AMS and ED are supported by Fellowships from the NBCF [ID# ECF-10-05, ECF-12-04, ECF-12-12 and ECF-13-04 respectively]. FA is supported by Future Fellowship from the Australian Research Council [ID: FT130101417]. JMWG is funding by a Scientific Fellowship from Breast Cancer Now. MJM and JAB are supported by an Australian Postgraduate Award (APA). AS was supported from NBCF program grant. SJC supported by NHMRC fellowship. Funding to pay the Open Access publication charges for this article was provided by The University of Queensland.
        </p>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-0"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-0"
                >
                  National Health and Medical Research Council
                </span>
                <span
                  data-testid="rek-grant-id-0"
                >
                   (
                  569645 | 1022263
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-0"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-1"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-1"
                >
                  Cancer Council Queensland
                </span>
                <span
                  data-testid="rek-grant-id-1"
                >
                   (
                  1042819
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-1"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-fvwuew"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-8bh1x2-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-label-2"
              >
                Grant agency (Grant ID)
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-xjoeqo-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
              >
                <span
                  data-testid="rek-grant-agency-2"
                >
                  National Breast Cancer Foundation
                </span>
                <span
                  data-testid="rek-grant-id-2"
                >
                   (
                  CG-12-07 | CG-10-04
                  ) 
                </span>
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
                data-testid="rek-grant-text-2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
